# med_clinics

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
appointments/: models.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_delete_article_delete_publication.py  0003_initial.py  0004_appointment_created_at.py  0005_alter_appointment_service.py
clients/: models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
clinics/: admin.py  models.py  serializers.py  urls.py  views.py
clinics/migrations/: 0001_initial.py  0002_clinic_lat_long.py  0003_clinic_image.py  0004_clinic_end_day_clinic_start_day.py  0005_alter_clinic_end_day_alter_clinic_start_day.py
feedbacks/: models.py  serializers.py  urls.py  views.py
feedbacks/migrations/: 0001_initial.py  0002_feedback_active.py
med_clinics/: asgi.py  settings.py  urls.py  utils.py  wsgi.py  yasg.py
services/: admin.py  models.py  serializers.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_delete_service_delete_servicetype.py  0003_initial.py  0004_clinicservice.py  0005_service_clinic_service_desc_service_specialist_and_more.py  0006_alter_service_desc.py  0007_alter_service_desc.py
specialists/: admin.py  models.py  serializers.py  urls.py  views.py
specialists/migrations/: 0001_initial.py  0002_specialist_experience_specialist_photo_and_more.py  0003_education_specialist_education.py  0004_remove_specialist_education_specialist_education.py  0005_alter_specialist_education.py  0006_specialist_clinic.py
